# eps-core

./: .gitignore  .gitmodules  LICENSE  README.md  package.json
admin/: .env.template  .gitignore  deploy.ts  gen_encryption_private_key.ts  gen_wallet.ts  network-config.ts  package.json  tsconfig.json
backend/: .env.example  Cargo.toml  README.md
backend/debian/: mail.service
backend/debian/scripts/: postinst  postrm  prerm
backend/src/: api.rs  checkpoint.rs  config.rs  listener.rs  main.rs  pdf.rs
contracts/: .env.template  .gitignore  .gitmodules  foundry.toml  remappings.txt
contracts/script/: CallLocal.s.sol  DeployLocal.s.sol
contracts/src/: ChainlinkPostagePriceModule.sol  EthMail.sol  EthereumPostalService.sol  IPostagePriceModule.sol  MailSender.sol
contracts/src/test/: MailingNFT.sol
contracts/test/: EthMail.t.sol  EthereumPostalService.t.sol  FakeChainlink.sol  MailingNFT.t.sol
lib/: README.md  package.json
lib/src/: enc.ts
test/: integration.spec.ts  package.json
