[package]
name = "mail"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
ethers = { version = "1.0.2", features = ["ws"] }
lazy_static = "1.4.0"
maplit = "1.0.2"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.152"
tokio = { version = "1.25", features = ["full"] }
ecies = { version = "0.2", default-features = false, features = ["pure"] }
cargo-deb = "1.42.1"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
lipsum = "0.8"
genpdf = { version = "0.2.0", features = ["images"] }
